load(
    "@rules_cc//cc:defs.bzl",
    "cc_binary",
    "cc_library"
)

# Common build settings
COMMON_DEFINES = [
    "LOG_LEVEL=1",
]

# All header files in cpp tree
HDRS = glob(["com/**/*.hpp"])

# Platform-specific settings
WIN32_DEFINES = ["RTX_WIN32"]
WIN32_LINKOPTS = []

LINUX_DEFINES = ["RT_LINUX"]
LINUX_LINKOPTS = [
    "-L/usr/local/lib",
    "-lpthread",
    "-lrt",
    "-luuid",
]

DARWIN_DEFINES = []
DARWIN_LINKOPTS = []

# Main library containing core functionality
cc_library(
    name = "com.github.doevelopper.atlassians.main",
    hdrs = HDRS,
    srcs = [
        "com/github/doevelopper/atlassians/atlas/Activator.cpp",
    ],
    defines = COMMON_DEFINES + select({
        "@bazel_tools//src/conditions:windows": WIN32_DEFINES,
        "@bazel_tools//src/conditions:linux_x86_64": LINUX_DEFINES,
        "//conditions:default": [],
    }),
    copts = ["-DLOG_LEVEL=1"] + select({
        "@bazel_tools//src/conditions:windows": ["/std:c++17"],
        "//conditions:default": ["-D_REENTRANT", "-fPIC"],
    }),
    features = select({
        "@bazel_tools//src/conditions:windows": ["windows_export_all_symbols"],
        "//conditions:default": [],
    }),
    includes = ["."],
    linkopts = select({
        "@bazel_tools//src/conditions:windows": WIN32_LINKOPTS,
        "@bazel_tools//src/conditions:linux_x86_64": LINUX_LINKOPTS,
        "@bazel_tools//src/conditions:darwin": DARWIN_LINKOPTS,
    }),
    deps = [
        "//boost:variant",
        "//_deps/log4cxx:log4cxx",
        # TODO: Add rapidjson and other boost libs when configured
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "com.github.doevelopper.atlassians.main.atlas",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "com.github.doevelopper.atlassians.main.logging",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "com.github.doevelopper.atlassians.main.launcher",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "com.github.doevelopper.atlassians.main.bin",
    srcs = ["main.cpp"],
    deps = [":com.github.doevelopper.atlassians.main"],
    visibility = ["//visibility:public"],
)
